Added page title

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mátyás Angyal Web Designer & Developer Personal Porfolio "
+      content="Personal portfolio website of Mátyás Angyal hungarian javascript developer and designer."
     />
     <meta
       name="keywords"
@@ -20,7 +20,7 @@
     />
     <link rel="manifest" href="./manifest.json" />
     <title>
-      Mátyás Angyal | Web Designer &amp; Developer Personal Portfolio
+      Mátyás Angyal | Web Developer
     </title>
   </head>
   <body>
