--- a/public/404.html
+++ b/public/404.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Personal portfolio website of Mátyás Angyal hungarian javascript developer and designer."
+    />
+    <meta
+      name="keywords"
+      content="matyas,angyal,web,designer,developer,html,css,javascript,bootstrap,react,wordpress,jquery,,node,nodejs,express,mongodb,nosql,mysql,frontend,backend"
+    />
+    <meta name="author" content="Mátyás Angyal <amatyas001@gmail.com>" />
+    <link rel="icon" href="./favicon.ico" />
+    <title>
+      Mátyás Angyal | Web Developer
+    </title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
@@ -27,15 +41,25 @@
 
       var l = window.location;
       l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-        l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
+        l.protocol +
+          "//" +
+          l.hostname +
+          (l.port ? ":" + l.port : "") +
+          l.pathname
+            .split("/")
+            .slice(0, 1 + segmentCount)
+            .join("/") +
+          "/?p=/" +
+          l.pathname
+            .slice(1)
+            .split("/")
+            .slice(segmentCount)
+            .join("/")
+            .replace(/&/g, "~and~") +
+          (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+          l.hash
       );
-
     </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
